--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "id": "ba28cdcc",
    "metadata": {},
    "outputs": [
@@ -1103,13 +1103,12 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "average_reading_score=school_data_complete_df['reading_score'].mean()\n",
     "average_reading_score"
    ]
   },
@@ -3207,7 +3206,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "45bc4bc7",
+   "id": "8c3687c6",
    "metadata": {},
    "outputs": [
     {
@@ -3447,7 +3446,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "799bf217",
+   "id": "4badb58c",
    "metadata": {},
    "outputs": [
     {
@@ -3486,7 +3485,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e11fa8a9",
+   "id": "7e9bd319",
    "metadata": {},
    "outputs": [
     {
@@ -3525,7 +3524,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7552dc40",
+   "id": "b2182d17",
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3562,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "90f8fb26",
+   "id": "2a49037f",
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +3600,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "56b3bd92",
+   "id": "04cbd0c9",
    "metadata": {},
    "outputs": [
     {
@@ -3842,7 +3841,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2a61604d",
+   "id": "2ed32e0b",
    "metadata": {},
    "outputs": [
     {
@@ -3881,7 +3880,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "569af328",
+   "id": "6efba6a3",
    "metadata": {},
    "outputs": [
     {
@@ -3920,7 +3919,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5cff6ccf",
+   "id": "1393b041",
    "metadata": {},
    "outputs": [
     {
@@ -4074,7 +4073,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c0f34e01",
+   "id": "2020aac3",
    "metadata": {},
    "outputs": [
     {
@@ -4219,7 +4218,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4f991649",
+   "id": "9a832a50",
    "metadata": {},
    "outputs": [
     {
@@ -4366,8 +4365,295 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "id": "dbbf1cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools=per_school_summary_df.sort_values(['% Overall Passing'],ascending=False)\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "4757a479",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Johnson High School            81.222432          53.539172  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Rodriguez High School          80.220055          52.988247  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show bottom five schools.\n",
+    "bottom_schools=per_School_summary_df.sort_values(['% Overall Passing'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ae3f6421",
+   "id": "4661ba9c",
    "metadata": {},
    "outputs": [],
    "source": []
