high-low performing schools

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -4511,7 +4511,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "4757a479",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
