high-low performing schools

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "id": "ba28cdcc",
    "metadata": {},
    "outputs": [
@@ -1103,12 +1103,13 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "average_reading_score=school_data_complete_df['reading_score'].mean()\n",
     "average_reading_score"
    ]
   },
@@ -4365,7 +4366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "id": "dbbf1cf7",
    "metadata": {},
    "outputs": [
@@ -4496,7 +4497,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4509,7 +4510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "id": "4757a479",
    "metadata": {
     "scrolled": true
@@ -4549,40 +4550,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Johnson High School</th>\n",
+       "      <th>Rodriguez High School</th>\n",
        "      <td>District</td>\n",
-       "      <td>4761</td>\n",
-       "      <td>$3,094,650.00</td>\n",
-       "      <td>$650.00</td>\n",
-       "      <td>77.072464</td>\n",
-       "      <td>80.966394</td>\n",
-       "      <td>66.057551</td>\n",
-       "      <td>81.222432</td>\n",
-       "      <td>53.539172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hernandez High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>4635</td>\n",
-       "      <td>$3,022,020.00</td>\n",
-       "      <td>$652.00</td>\n",
-       "      <td>77.289752</td>\n",
-       "      <td>80.934412</td>\n",
-       "      <td>66.752967</td>\n",
-       "      <td>80.862999</td>\n",
-       "      <td>53.527508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Huang High School</th>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>$1,910,635.00</td>\n",
-       "      <td>$655.00</td>\n",
-       "      <td>76.629414</td>\n",
-       "      <td>81.182722</td>\n",
-       "      <td>65.683922</td>\n",
-       "      <td>81.316421</td>\n",
-       "      <td>53.513884</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Figueroa High School</th>\n",
@@ -4597,16 +4574,40 @@
        "      <td>53.204476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
+       "      <th>Huang High School</th>\n",
        "      <td>District</td>\n",
-       "      <td>3999</td>\n",
-       "      <td>$2,547,363.00</td>\n",
-       "      <td>$637.00</td>\n",
-       "      <td>76.842711</td>\n",
-       "      <td>80.744686</td>\n",
-       "      <td>66.366592</td>\n",
-       "      <td>80.220055</td>\n",
-       "      <td>52.988247</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4614,42 +4615,43 @@
       ],
       "text/plain": [
        "                      School Type  Total Students Total School Budget  \\\n",
-       "Johnson High School      District            4761       $3,094,650.00   \n",
-       "Hernandez High School    District            4635       $3,022,020.00   \n",
-       "Huang High School        District            2917       $1,910,635.00   \n",
-       "Figueroa High School     District            2949       $1,884,411.00   \n",
        "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
        "\n",
        "                      Per Student Budget  Average Math Score  \\\n",
-       "Johnson High School              $650.00           77.072464   \n",
-       "Hernandez High School            $652.00           77.289752   \n",
-       "Huang High School                $655.00           76.629414   \n",
-       "Figueroa High School             $639.00           76.711767   \n",
        "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
        "\n",
        "                       Average Reading Score  % Passing Math  \\\n",
-       "Johnson High School                80.966394       66.057551   \n",
-       "Hernandez High School              80.934412       66.752967   \n",
-       "Huang High School                  81.182722       65.683922   \n",
-       "Figueroa High School               81.158020       65.988471   \n",
        "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
        "\n",
        "                       % Passing Reading  % Overall Passing  \n",
-       "Johnson High School            81.222432          53.539172  \n",
-       "Hernandez High School          80.862999          53.527508  \n",
-       "Huang High School              81.316421          53.513884  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
        "Figueroa High School           80.739234          53.204476  \n",
-       "Rodriguez High School          80.220055          52.988247  "
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sort and show bottom five schools.\n",
-    "bottom_schools=per_School_summary_df.sort_values(['% Overall Passing'])"
+    "bottom_schools=per_school_summary_df.sort_values(['% Overall Passing'])\n",
+    "bottom_schools.head()"
    ]
   },
   {
