--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -5175,7 +5175,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d18b9136",
+   "id": "b9f1056d",
    "metadata": {},
    "outputs": [
     {
@@ -5355,7 +5355,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "a56a9dfd",
+   "id": "5434b70e",
    "metadata": {},
    "outputs": [
     {
@@ -5449,7 +5449,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "848fa1f3",
+   "id": "8496015e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5462,7 +5462,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "486d77b3",
+   "id": "d2598073",
    "metadata": {},
    "outputs": [
     {
@@ -5642,7 +5642,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8c5b7bf7",
+   "id": "974913be",
    "metadata": {},
    "outputs": [
     {
@@ -5734,7 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f8090e36",
+   "id": "484ba4e0",
    "metadata": {},
    "outputs": [
     {
@@ -5764,7 +5764,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b8fc3323",
+   "id": "8be8a9f9",
    "metadata": {},
    "outputs": [
     {
@@ -5803,7 +5803,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "11989ae7",
+   "id": "d98e917e",
    "metadata": {},
    "outputs": [
     {
@@ -5829,7 +5829,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "fded61c8",
+   "id": "f34ec666",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5841,7 +5841,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "81476eb1",
+   "id": "7942f655",
    "metadata": {},
    "outputs": [
     {
@@ -6180,7 +6180,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d2431413",
+   "id": "6537d1cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6199,7 +6199,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "47bc9b02",
+   "id": "94f4db9a",
    "metadata": {},
    "outputs": [
     {
@@ -6225,7 +6225,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "099b25b0",
+   "id": "543c4d8b",
    "metadata": {},
    "outputs": [
     {
@@ -6344,7 +6344,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "5435d2c4",
+   "id": "e5196838",
    "metadata": {},
    "outputs": [
     {
@@ -6463,7 +6463,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f257826f",
+   "id": "d42ac9fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6475,7 +6475,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "f4bdc8a1",
+   "id": "6cf58a78",
    "metadata": {},
    "outputs": [
     {
@@ -6639,7 +6639,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "afabd7de",
+   "id": "d40739cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6658,7 +6658,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "0f61be9d",
+   "id": "3dd3468f",
    "metadata": {},
    "outputs": [
     {
@@ -6683,7 +6683,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "3dc8dc7a",
+   "id": "8fed0d3b",
    "metadata": {},
    "outputs": [
     {
@@ -6785,7 +6785,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "b2e060ca",
+   "id": "97b11641",
    "metadata": {},
    "outputs": [
     {
@@ -6889,8 +6889,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "id": "a0f70522",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns, by school type\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "4659b6ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "413e1ef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "48ff0749",
+   "id": "73fa284e",
    "metadata": {},
    "outputs": [],
    "source": []
